# python-project-50

./: .coverage  .coveragerc  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: genndiff.yml
gendiff/: __init__.py  gen_diff_simple.py  generate_diff.py
gendiff/prepare_data/: prepare_data.py
gendiff/scripts/: __init__.py  gendiff.py
gendiff/scripts/checkers/: checkers.py
gendiff/scripts/compare_data/: compare_data.py
gendiff/scripts/formartter/: formartter.py
gendiff/scripts/get_unique_keys/: unique_keys.py
gendiff/scripts/json_format/: json_format.py
gendiff/scripts/plain/: plain.py
gendiff/scripts/plain/scr/: plain_tools.py
gendiff/scripts/stylish/: __init__.py  stylish.py
tests/: test_generate_diff.py  test_my_project_50.py
tests/fixtures/: answers.txt  jsons.txt  test_2_file1.json  test_plan.txt  yamls.txt
tests/fixtures/answers/: answer_plain_test1.txt  answers.txt  answers_flat.txt  jsnon_test1_answer.json  jsnon_test1_answer.txt  test4_empty_full.txt
tests/fixtures/json_tests/: test_2_file2.json  test_6_plain.txt  test_6_plain_file1.json  test_6_plain_file2.json  test_6_recurs.txt  test_6_recurs_file1.json  test_6_recurs_file2.json
tests/fixtures/yml_tests/: test_2_yaml_file1.yml  test_2_yaml_file2.yml  test_3_yaml_file1.yml
tests/static_files/: test2_plain_json.txt  test3_positive_file5.txt  test4_full_empty.txt
