[tool.poetry]
name = "hexlet-code"
version = "1.5.0"
description = ""
authors = ["Yakovishin Timofey"]
readme = "README.md"
packages = [{include = "gendiff"}]

[tool.poetry.dependencies]
python = ">=3.10"
flake8 = "^5.0.4"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
coverage = "^7.2.1"
pyyaml = "^6.0"



[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

#[tool.poetry.group.dev.dependencies]
#flake8 = "^6.0.0"
#pytest = "^7.2.1"
#pytest-cov = "^4.0.0"
#coverage = "^7.2.1"
#pyyaml = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
